# trading

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  CONTRIBUTING.md  README.md  makefile  project.toml  requirements.txt
.github/workflows/: pylint.yml
docs/: .gitignore  Doxyfile  IBAPI.md  yfinance.md
examples/: README.md
include/: .gitignore
includes/: client.hpp
pytrader/: README.md  __init__.py
pytrader/libs/: __init__.py  security.py
pytrader/libs/accounts/: __init__.py  account.py
pytrader/libs/applications/: __init__.py
pytrader/libs/bars/: __init__.py
pytrader/libs/brokerclient/: __init__.py  brokerclient.py  ibkrclient.py
pytrader/libs/clients/: __init__.py
pytrader/libs/contracts/: __init__.py  abstractbase.py  base.py  contract.py  database.py  etf.py  ind_option.py  index.py  option.py  stk_option.py  stock.py
pytrader/libs/csvclient/: __init__.py
pytrader/libs/dbclient/: __init__.py  companies.py  etfs.py  stocks.py
pytrader/libs/events/: __init__.py  bars.py  base.py  contracts.py  fillevent.py  marketdata.py  marketevent.py  orderevent.py  orders.py  signalevent.py  ticks.py
pytrader/plugins/: __init__.py
pytrader/strategies/: .gitignore  __init__.py  base.py
pytrader/ui/: __init__.py  pytrader.py  pytrbroker.py  pytrdatabase.py  pytrdownload.py  pytrstrategy.py
src/: CMakeLists.txt  README.md  trader.cpp
src/brokerclient/: CMakeLists.txt  brokerclient.cpp  brokerclient.hpp
src/clients/broker/: CMakeLists.txt  ibkrclient.hpp
src/clients/broker/ibkr/tws/: CMakeLists.txt  ibkrclient.cpp  ibkrclient.hpp
src/version/: CMakeLists.txt  version.h.in  version.hpp
(+166 files in other folders)
